--- a/app/style.css
+++ b/app/style.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities; 
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+}
+
+@layer utilities {
+    .padding{
+        @apply sm:px-16 px-8 sm:py-24 py-12;
+    }
+}
