--- a/app/index.css
+++ b/app/index.css
@@ -9,8 +9,17 @@
     scroll-behavior: smooth;
 }
 
+.BVV {
+      color: black;
+      text-transform: uppercase;
+    }
 @layer utilities {
     .padding{
         @apply sm:px-16 px-8 sm:py-24 py-12;
     }
+    .padding-x {
+        @apply sm:px-16 px-8;
+      }
+
+    
 }
