--- a/app/globals.css
+++ b/app/globals.css
@@ -16,10 +16,11 @@ body{
     }
 h1 {
     @apply text-slate-800 font-bold;
+    -webkit-text-stroke: 2px black;
 }
 
 a {
-    @apply border-solid border-2 border-slate-900  rounded-md  shadow-[0_0_10px_black] hover:border-slate-600 hover:shadow-lightspot;
+    @apply dark:bg-slate-700 bg-slate-400 p-2 border-solid border-2 border-slate-900  rounded-md  shadow-[0_0_10px_black] hover:border-slate-600 hover:shadow-lightspot;
 }
 
 @layer utilities {
