--- a/app/globals.css
+++ b/app/globals.css
@@ -9,12 +9,13 @@
     scroll-behavior: smooth;
 }
 
-/* h1 {
-    @apply text-slate-800 font-bold;
-} */
 
 a {
-    @apply dark:bg-slate-700 bg-slate-400 mt-6 px-6 py-3 border-solid border-2 border-slate-900  rounded-md  shadow-[0_0_10px_black] hover:border-slate-600 hover:shadow-lightspot;
+    @apply colorBackgroundOpposite border-solid border-2 border-slate-900  rounded-md  shadow-[0_0_10px_black] hover:border-slate-600 hover:shadow-lightspot;
+}
+
+a.button1{
+    @apply mt-6 px-6 py-3
 }
 
 @layer utilities {
@@ -22,14 +23,20 @@ a {
         @apply dark:bg-slate-700  bg-slate-400 
     }
     .colorBackgroundOpposite{
-        @apply bg-slate-700  dark:bg-slate-400 
+        @apply dark:bg-slate-400 bg-slate-700   
     }
     .colorText{
         @apply dark:text-slate-900 text-gray-200
     }
+    .colorTextOpposite{
+        @apply dark:text-slate-200 text-gray-900
+    }
 
 
-    
+
+
+
+    /* ABOUT */
     .padding{
         @apply sm:px-16 px-1 sm:py-24 py-2;
     }
