--- a/app/globals.css
+++ b/app/globals.css
@@ -9,13 +9,9 @@
     scroll-behavior: smooth;
 }
 
-
-a {
-    @apply colorBackgroundOpposite border-solid border-2 border-slate-900  rounded-md  shadow-[0_0_10px_black] hover:border-slate-600 hover:shadow-lightspot;
-}
-
-a.button1{
-    @apply mt-6 px-6 py-3
+.hoverSpotlight{
+    @apply border-solid border-2 border-slate-900  rounded-md  shadow-[0_0_10px_black] hover:border-slate-600 hover:shadow-lightspot;
+    
 }
 
 @layer utilities {
@@ -36,11 +32,7 @@ a.button1{
 
 
 
-    /* ABOUT */
-    .padding{
-        @apply sm:px-16 px-1 sm:py-24 py-2;
-    }
-
+    /* WHERE??? */
     .brian {
         @apply font-bold underline
     }
