--- a/app/projects/1/style.css
+++ b/app/projects/1/style.css
@@ -20,3 +20,21 @@ h1 {
 /* a {
     @apply dark:bg-slate-700 bg-slate-400 p-2 border-solid border-2 border-slate-900  rounded-md  shadow-[0_0_10px_black] hover:border-slate-600 hover:shadow-lightspot;
 } */
+@keyframes fadeInSlide {
+    0% {
+      opacity: 0;
+      transform: translateY(-20px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
+  .keyFeatures {
+    opacity: 0;
+  }
+  
+  .keyFeatures.animate {
+    animation: fadeInSlide 0.6s ease-out forwards;
+  }
