--- a/app/globals.css
+++ b/app/globals.css
@@ -20,6 +20,26 @@
     hover:shadow-lightspot;
 }
 
+.fadeIn {
+  opacity: 0;
+}
+
+.animate {
+  animation: fadeInSlide 0.6s ease-out forwards;
+}
+
+@keyframes fadeInSlide {
+    0% {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+
 @layer utilities {
     .colorBackground{
         @apply dark:bg-slate-700  bg-slate-400 
